--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Zomboban!</title>
     <script type="module" src="./main.ts"></script>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div id="game"></div>
