--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Zomboban!</title>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/client.ts"></script>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
