--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <div id="game"></div>
+    <canvas id="canvas"></canvas>
     <pre id="log"></pre>
   </body>
 </html>
