--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <base href="/game">
     <title>Zomboban!</title>
     <script type="module" src="/src/client.ts"></script>
     <link rel="stylesheet" href="/src/style.css" />
