--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <canvas id="canvas"></canvas>
     <section id="signInForm">
       <h1>Sign in</h1>
-      <form action="/login/password" method="post">
+      <form action="login/password" method="post">
         <section>
           <label for="username">Username</label>
           <input id="username" name="username" type="text" autocomplete="username" required autofocus>
