--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <div id="rootElement"></div>
     <section id="signInForm">
       <h1>Sign in</h1>
       <form action="login/password" method="post">
