--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
+    <section id="devLog">
+      <a href="https://github.com/patreeceeo/zomboban" target="_blank">dev log</a>
+    </section>
+    </section>
     <section id="signInForm">
       <h1>Sign in</h1>
       <form action="login/password" method="post">
