--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <div class="canvasShrinkwrap">
+      <section id="DOMOverlay" class="bottomLeft positionAbsolute fillAndExpand layer1 colorWhite"></section>
+      <canvas id="canvas" class="topLeft positionAbsolute displayBlock fill"/>
+    </div>
     <section id="devLog">
       <a href="https://github.com/patreeceeo/zomboban" target="_blank">dev log</a>
-    </section>
     </section>
     <section id="signInForm">
       <h1>Sign in</h1>
