--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="canvasShrinkwrap">
-      <section id="DOMOverlay" class="bottomLeft positionAbsolute fillAndExpand layer1 colorWhite"></section>
-      <canvas id="canvas" class="topLeft positionAbsolute displayBlock fill"/>
+      <section id="DOMOverlay" class="bottom left positionAbsolute fillAndExpand layer1 colorWhite"></section>
+      <canvas id="canvas" class="top left positionAbsolute displayBlock fill"/>
     </div>
     <section id="devLog">
       <a href="https://github.com/patreeceeo/zomboban" target="_blank">dev log</a>
