--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
       <section id="DOMOverlay" class="bottom left positionAbsolute fillAndExpand layer1 colorWhite"></section>
       <canvas id="canvas" class="top left positionAbsolute displayBlock fill"/>
     </div>
-    <section id="devLog">
-      <a href="https://github.com/patreeceeo/zomboban" target="_blank">dev log</a>
+
+    <section class="bottom right positionAbsolute layer1">
+      <a href="#about">about</a>
     </section>
+
     <section id="signInForm">
       <h1>Sign in</h1>
       <form action="login/password" method="post">
