fix mouse wheel zoom

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="canvasShrinkwrap">
-      <section id="DOMOverlay" class="bottom left positionAbsolute fillAndExpand layer1 colorWhite"></section>
+      <section id="DOMOverlay" class="bottom left positionAbsolute fillAndExpand layer1 colorWhite pointerEventsNone"></section>
       <canvas id="canvas" class="top left positionAbsolute displayBlock fill"/>
     </div>
 
