--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <div class="canvasShrinkwrap">
       <section id="DOMOverlay" class="bottom left positionAbsolute fillAndExpand layer1 colorWhite pointerEventsNone"></section>
-      <canvas id="canvas" class="top left positionAbsolute displayBlock fill"/>
+      <canvas id="canvas" class="top left positionAbsolute displayBlock fullWidth fullHeight"></canvas>
+      <pre id="debug" class="bottom fullWidth positionAbsolute layer1 colorWhite">
+      </pre>
     </div>
 
     <section class="bottom right positionAbsolute layer1">
