--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <div class="canvasShrinkwrap">
       <section id="DOMOverlay" class="bottom left positionAbsolute fillAndExpand layer1 colorWhite pointerEventsNone"></section>
       <canvas id="canvas" class="top left positionAbsolute displayBlock fullWidth fullHeight"></canvas>
-      <pre id="debug" class="bottom fullWidth positionAbsolute layer1 colorWhite">
-      </pre>
+      <div class="bottom fullWidth positionAbsolute layer1 colorWhite">
+        <pre id="logElement"></pre>
+        <form id="logOptionsForm"></form>
+      </div>
     </div>
 
     <section class="bottom right positionAbsolute layer1">
