visualize pending actions

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <canvas id="canvas" class="top left positionAbsolute displayBlock fullWidth fullHeight"></canvas>
 
     </div>
+
     <div class="bottom fullWidth positionAbsolute layer1 colorWhite">
       <pre id="logElement"></pre>
       <form id="logOptionsForm">
@@ -22,6 +23,9 @@
           <input id="logLineMaxAgeInput" type="number" step="1" value="10" min="0" max="1000"> clear after (ms)
         </label>
       </form>
+    </div>
+
+    <div id="actionLogElement" class="top left fullHeight positionAbsolute layer1 colorWhite">
     </div>
 
     <form class="top right positionAbsolute layer1">
