--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       </form>
     </div>
 
-    <div id="actionLogElement" class="top left fullHeight positionAbsolute layer1 colorWhite">
+    <div class="top left fullHeight positionAbsolute layer1">
+      <table id="pendingActionsElement" class="colorGreen borderGreen"></table>
+      <div id="completedActionsElement" class="colorWhite"></div>
     </div>
 
     <form class="top right positionAbsolute layer1">
