more action visualization

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <div class="top left fullHeight positionAbsolute layer1">
       <table id="pendingActionsElement" class="colorGreen borderGreen"></table>
+      <table id="undoingActionsElement" class="colorRed borderRed"></table>
       <div id="completedActionsElement" class="colorWhite"></div>
     </div>
 
