hide action viz

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     </div>
 
     <div class="top left fullHeight positionAbsolute layer1">
+      <form>
+        <label class="displayBlock">
+          <input id="showActionViz" type="checkbox"> Show ActionViz
+        </label>
+      </form>
       <table id="pendingActionsElement" class="colorGreen borderGreen"></table>
       <table id="undoingActionsElement" class="colorRed borderRed"></table>
       <div id="completedActionsElement" class="colorWhite"></div>
