Add a win condition

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <section id="DOMOverlay" class="bottom left positionAbsolute fillAndExpand layer1 colorWhite pointerEventsNone"></section>
 
       <canvas id="canvas" class="top left positionAbsolute displayBlock fullWidth fullHeight"></canvas>
-
+      <div id="winMessageElement" class="positionAbsolute fullWidth fullHeight displayNone layer1 pointerEventsNone">
+        <h1 class="textAlignCenter">You sly devil, you!</h1>
+      </div>
     </div>
 
     <div class="bottom fullWidth positionAbsolute layer1 colorWhite">
