--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
           <input id="showActionViz" type="checkbox"> Show ActionViz
         </label>
       </form>
-      <table id="pendingActionsElement" class="colorGreen borderGreen"></table>
-      <table id="undoingActionsElement" class="colorRed borderRed"></table>
-      <div id="completedActionsElement" class="colorWhite"></div>
+      <div class="positionAbsolute pointerEventsNone">
+        <table id="pendingActionsElement" class="colorGreen borderGreen"></table>
+        <table id="undoingActionsElement" class="colorRed borderRed"></table>
+        <div id="completedActionsElement" class="colorWhite"></div>
+      </div>
     </div>
 
     <form class="top right positionAbsolute layer1">
