show current input

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <div id="winMessageElement" class="positionAbsolute fullWidth fullHeight displayNone layer1 pointerEventsNone">
         <h1 class="textAlignCenter">You sly devil, you!</h1>
       </div>
+      <h1 id="showCurrentInputElement" class="positionAbsolute fullWidth fullHeight layer1 pointerEventsNone textAlignCenter" style="top: calc(50% - 4em)">
+      </h1>
     </div>
 
     <div class="bottom fullWidth positionAbsolute layer1 colorWhite">
