hide dev tools in prod

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </form>
     </div>
 
-    <div class="top left fullHeight positionAbsolute layer1">
+    <div class="top left fullHeight positionAbsolute layer1" id="actionVizDiv">
       <form>
         <label class="displayBlock">
           <input id="showActionViz" type="checkbox"> Show ActionViz
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <form class="top right positionAbsolute layer1">
+    <form class="top right positionAbsolute layer1" id="devVarsForm">
       <label class="displayBlock">
         <input id="timeScaleInput" type="number" step="0.1" value="1" min="0.1" max="10"> time scale
       </label>
