--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
   <body>
     <noscript><h1>Sorry, but JavaScript must be <a href="https://www.wikihow.com/Enable-JavaScript">enabled</a> to play.</h1></noscript>
     <div class="canvasShrinkwrap">
+      <div id="uiRootElement" class="positionAbsolute layer2">
+      </div>
       <section id="DOMOverlay" class="bottom left positionAbsolute fillAndExpand layer1 colorWhite pointerEventsNone"></section>
 
       <canvas id="canvas" class="top left positionAbsolute displayBlock fullWidth fullHeight"></canvas>
       <div id="winMessageElement" class="positionAbsolute fullWidth fullHeight displayNone layer1 pointerEventsNone">
         <h1 class="textAlignCenter">You sly devil, you!</h1>
       </div>
-      <h1 id="showCurrentInputElement" class="positionAbsolute fullWidth fullHeight layer1 pointerEventsNone textAlignCenter" style="top: calc(50% - 4em)">
+      <section class="bottom right positionAbsolute layer2">
+        <a href="#about"><img src="/assets/images/questionmark.png"></a>
+      </section>
+      <h1 id="showCurrentInputElement" class="positionAbsolute fullWidth layer1 pointerEventsNone textAlignCenter" style="top: calc(50% - 4em)">
       </h1>
+
+      <div class="top left positionAbsolute displayFlex fullWidth fullHeight" id="menuElement"></div>
     </div>
 
     <div class="bottom fullWidth positionAbsolute layer1 colorWhite">
@@ -54,9 +61,6 @@
       </label>
     </form>
 
-    <section class="bottom right positionAbsolute layer1">
-      <a href="#about">about</a>
-    </section>
 
     <section id="signInForm">
       <h1>Sign in</h1>
