--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <noscript><h1>Sorry, but JavaScript must be <a href="https://www.wikihow.com/Enable-JavaScript">enabled</a> to play.</h1></noscript>
     <div class="canvasShrinkwrap">
-      <div id="uiRootElement" class="positionAbsolute layer1 fillAndExpand pointerEventsNone">
+      <div id="uiRootElement" class="positionAbsolute layer2 fillAndExpand">
       </div>
       <canvas id="canvas" class="top left positionAbsolute displayBlock fullWidth fullHeight"></canvas>
       <div id="winMessageElement" class="positionAbsolute fullWidth fullHeight displayNone layer1 pointerEventsNone">
