--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1 class="textAlignCenter">You sly devil, you!</h1>
       </div>
       <section class="bottom right positionAbsolute layer2">
-        <a href="#about"><img src="/assets/images/questionmark.png"></a>
+        <a href="#pauseMenu"><img src="/assets/images/questionmark.png"></a>
       </section>
       <h1 id="showCurrentInputElement" class="positionAbsolute fullWidth layer1 pointerEventsNone textAlignCenter" style="top: calc(50% - 4em)">
       </h1>
