--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </div>
       <section class="bottom right positionAbsolute layer2">
         <a href="#pauseMenu"><img src="/assets/images/questionmark.png"></a>
+        <div id="timeControlButtons" class="displayNone"><button id="rewindButton">rewind</button><button id="pauseButton">pause</button><button id="playButton">play</button></div>
       </section>
       <h1 id="showCurrentInputElement" class="positionAbsolute fullWidth layer1 pointerEventsNone textAlignCenter" style="top: calc(50% - 4em)">
       </h1>
