--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <canvas id="canvas" class="top left positionAbsolute displayBlock fullWidth fullHeight"></canvas>
       <div id="winMessageElement" class="positionAbsolute fullWidth fullHeight displayNone layer1 pointerEventsNone">
         <h1 class="textAlignCenter">You sly devil, you!</h1>
+        <h2 class="textAlignCenter">Press Shift+R to restart</h1>
       </div>
       <section class="bottom right positionAbsolute layer2">
         <a href="#pauseMenu"><img src="/assets/images/questionmark.png"></a>
