add undo feedback

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <h1 class="textAlignCenter">You sly devil, you!</h1>
         <h2 class="textAlignCenter">Press Shift+R to restart</h1>
       </div>
+      <div id="undoFeedbackElement" class="positionAbsolute fullWidth fullHeight displayNone flexCenter flexDirectionColumn layer1 pointerEventsNone">
+        <h1>Undoing&hellip;</h1>
+        <img src="/assets/images/time-travel.gif" style="height: 24rem; width: 24rem">
+      </div>
       <section class="bottom right positionAbsolute layer2">
         <a href="#pauseMenu"><img src="/assets/images/questionmark.png"></a>
         <div id="timeControlButtons" class="displayNone"><button id="rewindButton">rewind</button><button id="pauseButton">pause</button><button id="playButton">play</button></div>
