center win message

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </form>
       </div>
       <canvas id="canvas" class="top left positionAbsolute displayBlock fullWidth fullHeight"></canvas>
-      <div id="winMessageElement" class="positionAbsolute fullWidth fullHeight displayNone layer1 pointerEventsNone">
+      <div id="winMessageElement" class="positionAbsolute fullWidth fullHeight displayNone flexCenter flexDirectionColumn layer1 pointerEventsNone">
         <h1 class="textAlignCenter">You sly devil, you!</h1>
         <h2 class="textAlignCenter">Press Shift+R to restart</h1>
       </div>
