--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         </form>
       </div>
       <canvas id="canvas" class="top left positionAbsolute displayBlock fullWidth fullHeight"></canvas>
+      <div id="loadingFeedbackElement" class="positionAbsolute fullWidth fullHeight displayNone flexCenter flexDirectionColumn layer1 pointerEventsNone">
+        <h1>Loading&hellip;</h1>
+      </div>
       <div id="winMessageElement" class="positionAbsolute fullWidth fullHeight displayNone flexCenter flexDirectionColumn layer1 pointerEventsNone">
         <h1 class="textAlignCenter">You sly devil, you!</h1>
         <h2 class="textAlignCenter">Press Shift+R to restart</h1>
