--- a/index.html
+++ b/index.html
@@ -5,41 +5,44 @@
     <base href="/game">
     <title>Game Demo</title>
     <script type="module" src="/src/client.ts"></script>
+    <link rel="stylesheet" href="https://unpkg.com/missing.css@1.1.2">
+    <!-- Prism theme (https://prismjs.com/): -->
+    <link rel="stylesheet" href="https://unpkg.com/missing.css@1.1.2/prism">
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <noscript><h1>Sorry, but JavaScript must be <a href="https://www.wikihow.com/Enable-JavaScript">enabled</a> to play.</h1></noscript>
     <div class="canvasShrinkwrap">
-      <div id="uiRootElement" class="positionAbsolute layer2 fillAndExpand">
-        <form class="top right positionAbsolute layer1" id="devVarsForm">
-          <label class="displayBlock">
+      <div id="uiRootElement" class="absolute z-index:2 fillAndExpand">
+        <form class="top right absolute z-index:1" id="devVarsForm">
+          <label class="display:block">
             <input id="timeScaleInput" type="number" step="0.1" value="1" min="0.1" max="10"> time scale
           </label>
-          <label class="displayBlock">
+          <label class="display:block">
             <input id="moveTimeInput" type="number" step="1" value="200" min="1" max="2000"> move time (ms)
           </label>
-          <label class="displayBlock">
+          <label class="display:block">
             <input id="turnTimeInput" type="number" step="1" value="30" min="1" max="2000"> turn time (ms)
           </label>
         </form>
       </div>
-      <canvas id="canvas" class="top left positionAbsolute displayBlock fullWidth fullHeight"></canvas>
-      <div id="loadingFeedbackElement" class="positionAbsolute fullWidth fullHeight displayNone flexCenter flexDirectionColumn layer1 pointerEventsNone">
+      <canvas id="canvas" class="display:block width:100% height:100%"></canvas>
+      <div id="loadingFeedbackElement" class="absolute top width:100% height:100% display:none f-col justify-content:center align-items:center z-index:1 pointer-events:none">
         <h1>Loading&hellip;</h1>
       </div>
-      <div id="winMessageElement" class="positionAbsolute fullWidth fullHeight displayNone flexCenter flexDirectionColumn layer1 pointerEventsNone">
-        <h1 class="textAlignCenter">You sly devil, you!</h1>
-        <h2 class="textAlignCenter">Press Shift+R to restart</h1>
+      <div id="winMessageElement" class="absolute width:100% height:100% display:none f-col justify-content:center align-items:center z-index:1 ponter-events:none">
+        <h1 class="text-align:center">You sly devil, you!</h1>
+        <h2 class="text-align:center">Press Shift+R to restart</h1>
       </div>
-      <div id="undoFeedbackElement" class="positionAbsolute fullWidth fullHeight displayNone flexCenter flexDirectionColumn layer1 pointerEventsNone">
+      <div id="undoFeedbackElement" class="absolute top width:100% height:100% display:none f-col justify-content:center align-items:center z-index:1 ponter-events:none">
         <h1>Undoing&hellip;</h1>
         <img src="/assets/images/time-travel.gif" style="height: 24rem; width: 24rem">
       </div>
-      <section class="bottom right positionAbsolute layer2">
+      <section class="bottom right absolute z-index:2">
         <a href="#pauseMenu"><img src="/assets/images/questionmark.png"></a>
-        <div id="timeControlButtons" class="displayNone"><button id="rewindButton">rewind</button><button id="pauseButton">pause</button><button id="playButton">play</button></div>
+        <div id="timeControlButtons" class="display:none"><button id="rewindButton">rewind</button><button id="pauseButton">pause</button><button id="playButton">play</button></div>
       </section>
-      <h1 id="showCurrentInputElement" class="positionAbsolute fullWidth layer1 pointerEventsNone textAlignCenter" style="top: calc(50% - 4em)">
+      <h1 id="showCurrentInputElement" class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% - 4em)">
       </h1>
     </div>
 
