--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <base href="/game">
     <title>Game Demo</title>
     <script type="module" src="/src/client.ts"></script>
-    <link rel="stylesheet" href="https://unpkg.com/missing.css@1.1.2">
-    <!-- Prism theme (https://prismjs.com/): -->
-    <link rel="stylesheet" href="https://unpkg.com/missing.css@1.1.2/prism">
+    <link rel="stylesheet" href="/src/missing.min.css">
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
