--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <dialog id="signInElement">
       <!-- TODO use a request indicator -->
       <h1>Sign in</h1>
-      <form class="table rows" action="login/password" method="post" hx-boost="true" hx-target="#flashes" hx-push-url="false" hx-on="htmx:responseError">
+      <form class="table rows" action="login/password" method="post" hx-boost="true" hx-target="#flashes" hx-push-url="false" hx-on="htmx:responseError" hx-swap="afterbegin">
         <p>
           <label for="username">Username</label>
           <input id="username" name="username" type="text" autocomplete="username" required autofocus>
