--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
           <input id="turnTimeInput" type="number" step="1" value="30" min="1" max="2000"> turn time (ms)
         </label>
       </form>
-      <div id="loadingFeedbackElement" class="absolute top width:100% height:100% display:none f-col justify-content:center align-items:center z-index:1 pointer-events:none">
-        <h1>Loading&hellip;</h1>
-      </div>
       <div id="winMessageElement" class="absolute width:100% height:100% display:none f-col justify-content:center align-items:center z-index:1 ponter-events:none">
         <h1 class="text-align:center">You sly devil, you!</h1>
         <h2 class="text-align:center">Press Shift+R to restart</h1>
@@ -47,7 +44,7 @@
     </div>
 
     <div id="flashes" class="fixed top z-index:3 width:100%"></div>
-    <img  class="htmx-indicator fixed top left" style="height: 6em;" src="/assets/images/rotating-cube.gif" id="requestIndicator" />
+    <img  class="htmx-indicator fixed top left z-index:3 width:100% padding" src="/assets/images/rotating-cube.gif" id="requestIndicator" />
     <dialog id="signInElement">
       <!-- TODO use a request indicator -->
       <h1>Sign in</h1>
