--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@
     </div>
 
     <div id="flashes" class="fixed top z-index:3 width:100%"></div>
-    <img  class="htmx-indicator fixed top left z-index:3 width:100% padding" src="/assets/images/rotating-cube.gif" id="requestIndicator" />
+    <dialog id="requestIndicatorElement" class="text-align:center">
+      <img class="width:100%" src="/assets/images/rotating-cube.gif"/>
+      <h1><span class="message">working</span>&hellip;</h1>
+    </dialog>
     <dialog id="signInElement">
       <!-- TODO use a request indicator -->
       <h1>Sign in</h1>
-      <form class="table rows" action="login/password" method="post" hx-boost="true" hx-target="#flashes" hx-push-url="false" hx-on="htmx:responseError" hx-swap="afterbegin" hx-indicator="#requestIndicator">
+      <form class="table rows" action="login/password" method="post" hx-boost="true" hx-target="#flashes" hx-push-url="false" hx-on="htmx:responseError" hx-swap="afterbegin">
         <p>
           <label for="username">Username</label>
           <input id="username" name="username" type="text" autocomplete="username" required autofocus>
@@ -59,8 +62,8 @@
         </p>
         <fieldset>
           <p class="tool-bar">
-          <input type="button" name="cancel" value="Cancel" />
-          <input type="submit" value="Sign in" />
+            <input type="button" name="cancel" value="Cancel" />
+            <input type="submit" value="Sign in" />
           </p>
         </fieldset>
       </form>
