--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </h1>
     </div>
 
-    <div id="flashes" class="fixed top z-index:3 width:100%"></div>
+    <div id="flashesElement" class="fixed top z-index:3 width:100%"></div>
     <dialog id="requestIndicatorElement" class="text-align:center">
       <img class="width:100%" src="/assets/images/rotating-cube.gif"/>
       <h1><span class="message">working</span>&hellip;</h1>
@@ -51,7 +51,7 @@
     <dialog id="signInElement">
       <!-- TODO use a request indicator -->
       <h1>Sign in</h1>
-      <form class="table rows" action="login/password" method="post" hx-boost="true" hx-target="#flashes" hx-push-url="false" hx-on="htmx:responseError" hx-swap="afterbegin">
+      <form class="table rows" action="login/password" method="post" hx-boost="true" hx-target="#flashesElement" hx-push-url="false" hx-on="htmx:responseError" hx-swap="afterbegin">
         <p>
           <label for="username">Username</label>
           <input id="username" name="username" type="text" autocomplete="username" required autofocus>
