--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <noscript><h1>Sorry, but JavaScript must be <a href="https://www.wikihow.com/Enable-JavaScript">enabled</a> to play.</h1></noscript>
+    <div id="devtoolsElement" hx-get="/devtools" hx-trigger="get"></div>
     <div class="canvasShrinkwrap">
       <canvas id="canvas" class="display:block width:100% height:100%"></canvas>
       <div id="uiRootElement" class="absolute top z-index:2 width:100% height:100%">
@@ -43,10 +44,7 @@
       </h1>
     </div>
 
-    <div class="fixed top z-index:3 width:100%">
-      <div id="devtoolsElement" hx-get="/devtools" hx-trigger="get"></div>
-      <div id="flashesElement"></div>
-    </div>
+    <div class="fixed top z-index:3 width:100%" id="flashesElement"></div>
     <dialog id="requestIndicatorElement" class="text-align:center">
       <img class="width:100%" src="/assets/images/rotating-cube.gif"/>
       <h1><span class="message">working</span>&hellip;</h1>
