integrate Alpine.js

--- a/src/ui/devtools.html
+++ b/src/ui/devtools.html
@@ -2,6 +2,6 @@
 <!doctype html>
 <html lang="en">
   <body>
-    The tools!
+    <button x-show="!$store._.isSignedIn">Sign In</button>
   </body>
 </html>
