start creating my own UI framework

--- a/src/ui/devtools.html
+++ b/src/ui/devtools.html
@@ -2,6 +2,6 @@
 <!doctype html>
 <html lang="en">
   <body>
-    <button x-show="$store._.isSignedIn">Sign Out</button>
+    <button x-click="signOut">Sign Out!!</button>
   </body>
 </html>
