--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <noscript><h1>Sorry, but JavaScript must be <a href="https://www.wikihow.com/Enable-JavaScript">enabled</a> to play.</h1></noscript>
-    <div id="devtoolsElement" hx-get="/devtools" hx-trigger="get"></div>
+    <devtools x-show="isSignedIn"></devtools>
     <div class="canvasShrinkwrap">
       <canvas id="canvas" class="display:block width:100% height:100%"></canvas>
       <div id="uiRootElement" class="absolute top z-index:2 width:100% height:100%">
