--- a/tests/index.html
+++ b/tests/index.html
@@ -6,6 +6,6 @@
     <script type="module" src="./setup.ts"></script>
   </head>
   <body>
-    <devtools></devtools>
+    <basic></basic>
   </body>
 </html>
