really test x-show

--- a/tests/index.html
+++ b/tests/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <title>UI Tests</title>
     <script type="module" src="./setup.ts"></script>
+
+    <!-- certain CSS classes are required for certain features -->
+    <link rel="stylesheet" href="../src/style.css"/>
   </head>
   <body>
     <group description="Islands">
