use customElements API

--- a/tests/index.html
+++ b/tests/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="../src/style.css"/>
   </head>
   <body>
-    <group description="Islands">
-      <basic test="basic"></basic>
-      <basic test="using x-show" x-show="canPigsFly"></basic>
-    </group>
+    <test-group description="Islands">
+      <island-basic test="basic"></island-basic>
+      <island-basic test="using x-show" x-show="canPigsFly"></island-basic>
+    </test-group>
     <button id="togglePigWings" onclick="togglePigWings()">toggle pig wings</button>
   </body>
 </html>
