--- a/src/ui/toolbar.html
+++ b/src/ui/toolbar.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <body>
     <section class="tool-bar">
-      <div x-show="isSignedIn">
+      <div z-show="isSignedIn">
         <button>Sign Out</button>
         <button>Save</button>
         <button>Toggle Logs</button>
