--- a/tests/index.html
+++ b/tests/index.html
@@ -12,6 +12,8 @@
     <test-group description="Islands">
       <island-basic test="basic"></island-basic>
       <island-basic test="using z-show" z-show="canPigsFly"></island-basic>
+    </test-group>
+    <test-group description="Attribute directives">
       <island-handle-click test="using z-click"></island-handle-click>
     </test-group>
     <button id="togglePigWings" onclick="togglePigWings()">toggle pig wings</button>
