--- a/tests/index.html
+++ b/tests/index.html
@@ -13,6 +13,7 @@
       <island-basic test="basic"></island-basic>
       <island-basic test="z-show" z-show="canPigsFly"></island-basic>
       <island-handle-click test="z-click"></island-handle-click>
+      <island-interpolation test="interpolation"></island-interpolation>
     </test-group>
     <button id="togglePigWings" onclick="togglePigWings()">toggle pig wings</button>
   </body>
