--- a/tests/index.html
+++ b/tests/index.html
@@ -14,6 +14,7 @@
       <island-basic test="z-show" z-show="canPigsFly"></island-basic>
       <island-handle-click test="z-click"></island-handle-click>
       <island-interpolation test="interpolation"></island-interpolation>
+      <island-interpolation test="z-show+interpolation" z-show="canPigsFly"></island-interpolation>
     </test-group>
     <button id="togglePigWings" onclick="togglePigWings()">toggle pig wings</button>
   </body>
