porous island scope

--- a/tests/index.html
+++ b/tests/index.html
@@ -15,6 +15,7 @@
       <island-handle-click test="z-click"></island-handle-click>
       <island-interpolation test="interpolation"></island-interpolation>
       <island-interpolation test="z-show+interpolation" z-show="canPigsFly"></island-interpolation>
+      <island-porous test="porous"></island-porous>
     </test-group>
     <button id="togglePigWings" onclick="togglePigWings()">toggle pig wings</button>
   </body>
