--- a/tests/index.html
+++ b/tests/index.html
@@ -15,13 +15,13 @@
       <island-handle-click test="z-click"></island-handle-click>
       <island-interpolation test="interpolation"></island-interpolation>
       <island-interpolation test="z-show+interpolation" z-show="canPigsFly"></island-interpolation>
-      <island-porous test="porous"></island-porous>
+      <island-porous test="porous" can-fly="canPigsFly"></island-porous>
     </test-group>
     <test-group description="directives">
       <form test="z-map" onsubmit="addColor(event)">
         What's your favorite color?
         <ul z-map="colors" z-map-as="$color">
-          <!-- TODO interpolate attributes -->
+          <!-- TODO interpolate attributes? -->
           <li onclick="removeColor(event)">$color</li>
         </ul>
         <label for="other"> other <input type="text" name="other"/>
