change some names

--- a/tests/index.html
+++ b/tests/index.html
@@ -15,7 +15,7 @@
       <island-handle-click test="z-click"></island-handle-click>
       <island-interpolation test="interpolation"></island-interpolation>
       <island-interpolation test="z-show+interpolation" z-show="canPigsFly"></island-interpolation>
-      <island-porous test="porous" can-fly="canPigsFly"></island-porous>
+      <island-porous test="props" can-fly="canPigsFly"></island-porous>
     </test-group>
     <test-group description="directives">
       <form test="z-map" onsubmit="addColor(event)">
