--- a/tests/index.html
+++ b/tests/index.html
@@ -27,6 +27,6 @@
         <label for="other"> other <input type="text" name="other"/>
       </form>
     </test-group>
-    <button id="togglePigWings" onclick="togglePigWings()">toggle pig wings</button>
+    <button id="toggleButton" onclick="togglePigWings()">toggle pig wings</button>
   </body>
 </html>
