--- a/tests/index.html
+++ b/tests/index.html
@@ -10,15 +10,15 @@
   </head>
   <body>
     <test-group description="Islands">
-      <island-basic test="basic"></island-basic>
-      <island-basic test="z-show" z-show="canPigsFly"></island-basic>
-      <island-handle-click test="z-click"></island-handle-click>
-      <island-interpolation test="interpolation"></island-interpolation>
-      <island-interpolation test="z-show+interpolation" z-show="canPigsFly"></island-interpolation>
-      <island-porous test="props" can-fly="canPigsFly"></island-porous>
+      <island-basic test="basic" class="ZuiTestCase"></island-basic>
+      <island-basic test="z-show" z-show="canPigsFly" class="ZuiTestCase"></island-basic>
+      <island-handle-click test="z-click" class="ZuiTestCase"></island-handle-click>
+      <island-interpolation test="interpolation" class="ZuiTestCase"></island-interpolation>
+      <island-interpolation test="z-show+interpolation" z-show="canPigsFly" class="ZuiTestCase"></island-interpolation>
+      <island-porous test="props" can-fly="canPigsFly" class="ZuiTestCase"></island-porous>
     </test-group>
     <test-group description="directives">
-      <form test="z-map" onsubmit="addColor(event)">
+      <form test="z-map" onsubmit="addColor(event)" class="ZuiTestCase">
         What's your favorite color?
         <ul z-map="colors" z-map-as="$color">
           <!-- TODO interpolate attributes? -->
