--- a/src/ui/my-admin-tools.html
+++ b/src/ui/my-admin-tools.html
@@ -2,10 +2,12 @@
 <!doctype html>
 <html lang="en">
   <body>
-    <button>Sign Out</button>
-    <button>Save</button>
-    <button>Toggle Logs</button>
-    <button>Toggle Vars</button>
-    <button>Toggle Input Feedback</button>
+    <div class="tool-bar">
+    <button class="padding:0"><img src="assets/images/sign-out-icon.gif"></button>
+    <button class="padding:0"><img src="assets/images/save-icon.gif"></button>
+    <button class="padding:0"><img src="assets/images/logs-icon.gif"></button>
+    <button class="padding:0"><img src="assets/images/vars-icon.gif"></button>
+    <button class="padding:0"><img src="assets/images/feedback-icon.gif"></button>
+    </div>
   </body>
 </html>
