--- a/public/my-toolbar.html
+++ b/public/my-toolbar.html
@@ -4,10 +4,10 @@
   <body>
     <section class="tool-bar">
       <my-admin-toolbar z-show="isSignedIn"></my-admin-toolbar>
-      <button>Restart</button>
-      <button>Rewind</button>
-      <button>Pause/Play (toggle turn-based mode)</button>
-      <button>Main Menu</button>
+      <button class="padding:0"><img src="assets/images/reset-icon.gif"></button>
+      <button class="padding:0"><img src="assets/images/rewind-icon.gif"></button>
+      <button class="padding:0"><img src="assets/images/play-icon.gif"></button>
+      <button class="padding:0"><img src="assets/images/menu-icon.gif"></button>
     </section>
   </body>
 </html>
