wire up restart button

--- a/public/my-toolbar.html
+++ b/public/my-toolbar.html
@@ -4,7 +4,7 @@
   <body>
     <section class="tool-bar">
       <my-admin-toolbar z-show="isSignedIn"></my-admin-toolbar>
-      <button class="padding:0"><img src="assets/images/reset-icon.gif"></button>
+      <button class="padding:0" z-click="handleClickReset"><img src="assets/images/reset-icon.gif"></button>
       <button class="padding:0"><img src="assets/images/rewind-icon.gif"></button>
       <button class="padding:0"><img src="assets/images/play-icon.gif"></button>
       <button class="padding:0"><img src="assets/images/menu-icon.gif"></button>
